<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Proj0">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button1"
        android:id="@+id/button"
        android:background="#FF5555"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button2"
        android:id="@+id/button2"
        android:background="#FF5555"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button3"
        android:id="@+id/button3"
        android:background="#FF5555"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#FF5555"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#FF5555"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:background="#FF5555"
        android:onClick="toastMyApp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

</RelativeLayout>
